landing page route + seed tags
Signed-off-by: Nassim Boukhalfa <nassim106@hotmail.com>

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Dionysos L'app</h1>
+<h3>Devinez ce que vous allez faire ce soir !</h3>
+<%= link_to "Commencez le quiz!", events_search_path %>
+
+
