--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,10 @@
-<h1>Dionysos L'app</h1>
-<h3>Devinez ce que vous allez faire ce soir !</h3>
-<%= link_to "Commencez le quiz!", events_search_path %>
+<div class="home-container" style="background-image: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0)), url(<%= image_path "background.jpg" %>);">
+  <div class="logo-home">
+    <%= image_tag "logo-fullscreen.png" %>
+  </div>
+  <div class="start-button">
+    <%= link_to "Start Now", events_search_path %>
+  </div>
+</div>
 
 
