--- a/app/views/events/search/show.html.erb
+++ b/app/views/events/search/show.html.erb
@@ -2,7 +2,7 @@
   <% @answers.each do |answer| %>
     <%= link_to events_search_path(step: @step, answer: answer),class: "link-card-#{@answers.length}", method: :post do %>
       <div class="answer-card" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path "tags/#{answer.parameterize}.jpg" %>)">
-        <%= answer %>
+        <%= answer.capitalize %>
       </div>
     <% end %>
   <% end %>
