adding music photos and cinema category

--- a/app/assets/stylesheets/components/_answer-card.scss
+++ b/app/assets/stylesheets/components/_answer-card.scss
@@ -1,10 +1,19 @@
 
 .show-container-2 {
-  display: flex;
+  display: flex;;
+  background-color: $dark-black;
 }
 
 .show-container-3 {
   display: flex;
+  background-color: $dark-black;
+}
+
+
+.show-container-6 {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: $dark-black;
 }
 
 .answer-card {
@@ -32,6 +41,19 @@
 .link-card-3 {
   height: calc(100vh - 60px);
   flex: 0 0 33%;
+  font-size: 3em;
+  color: $white;
+  transition: all .5s ease;
+  &:hover {
+    text-decoration: none;
+    color: $orange;
+    border: 12px solid $orange;
+  }
+}
+
+.link-card-6 {
+  height: calc(50vh - 30px);
+  flex: 0 0 33.3%;
   font-size: 3em;
   color: $white;
   transition: all .5s ease;
