--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
 
   <div>
     <ul class="nav-links">
-      <li class="link-orange"><%= link_to "Restart", root_path%></li>
+      <li class="link-orange"><%= link_to "Rejouer", root_path%></li>
       <li><%= link_to "Login",new_user_session_path%></li>
     </ul>
   </div>
