fixed scrapper mathod

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Events#index</h1>
 <p>Find me in app/views/events/index.html.erb</p>
 
-<%= session[:search] %>
+<%= @answers %>
 <hr>
 <h1><%= @events.all.length %></h1>
 <div>
