--- a/app/assets/stylesheets/components/_answer-card.scss
+++ b/app/assets/stylesheets/components/_answer-card.scss
@@ -26,6 +26,7 @@
 }
 
 .link-card-2 {
+  font-family: 'Permanent Marker', cursive;
   height: calc(100vh - 60px);
   flex: 0 0 50%;
   font-size: 3em;
@@ -39,6 +40,7 @@
 }
 
 .link-card-3 {
+  font-family: 'Permanent Marker', cursive;
   height: calc(100vh - 60px);
   flex: 0 0 33%;
   font-size: 3em;
@@ -52,6 +54,7 @@
 }
 
 .link-card-6 {
+  font-family: 'Permanent Marker', cursive;
   height: calc(50vh - 30px);
   flex: 0 0 33.3%;
   font-size: 3em;
