--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,18 +1,25 @@
 // Specific CSS for your home-page
-.home-container {
+.home-wrapper {
   height: 100vh;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 80%;
+  height: 800px;
 }
 
 .logo-home {
    img {
     max-width: 700px;
   }
-  margin-bottom: 180px;
 }
 
 .start-button {
@@ -29,4 +36,13 @@
       background-color: $orange;
     }
   }
+}
+
+.tagline {
+  h2 {
+    color: $orange;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 3em;
+  }
+  margin: 100px 0;
 }
