--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -11,18 +11,20 @@
 .event-photo-present {
   height: 500px;
   border: 5px solid $dark-black;
+  background-size: cover;
 }
 
 .event-photo-venue {
   height: 500px;
-  border: 5px solid $dark-black;
+  border-left: 5px solid rgba(0,0,0,1);
+  border-right: 5px solid rgba(0,0,0,1);
   background-size: cover;
 }
 
 .event-details {
   height: 500px;
   padding: 70px;
-  background-color: #aaa4;
+  background-color: rgba(0,0,0,0.5);
   border-top: 5px solid $orange;
   border-bottom: 5px solid $orange;
 }
