--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,10 +6,14 @@
 <h1><%= @events.all.length %></h1>
 <div>
   <% @events.each do |event| %>
-    <h2><%= event.name %></h2>
+    <%= link_to event_path(event.id) do %>
+      <h2><%= event.name %></h2>
+    <% end %>
     <p>matching: <%= event.matching %></p>
     <p><%= event.tags.map(&:name) %></p>
   <% end %>
 </div>
 <hr>
 <%= @events.inspect %>
+
+
