--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag "logo-fullscreen.png" %>
   </div>
   <div class="tagline">
-    <h2>Comment vois-tu ta soirée ce soir ?</h2>
+    <h2>Comment vois-tu ta soirée ?</h2>
   </div>
   <div class="start-button">
     <%= link_to "Start Now", events_search_path %>
