finished gif card-background

--- a/app/assets/stylesheets/components/_answer-card.scss
+++ b/app/assets/stylesheets/components/_answer-card.scss
@@ -9,6 +9,11 @@
   background-color: $dark-black;
 }
 
+.show-container-4 {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: $dark-black;
+}
 
 .show-container-6 {
   display: flex;
@@ -52,6 +57,21 @@
     border: 12px solid $orange;
   }
 }
+
+.link-card-4 {
+  font-family: 'Permanent Marker', cursive;
+  height: calc(50vh - 30px);
+  flex: 0 0 50%;
+  font-size: 3em;
+  color: $white;
+  transition: all .5s ease;
+  &:hover {
+    text-decoration: none;
+    color: $orange;
+    border: 12px solid $orange;
+  }
+}
+
 
 .link-card-6 {
   font-family: 'Permanent Marker', cursive;
