--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -26,6 +26,8 @@
   }
 
   a {
+    font-family: 'Permanent Marker', cursive;
+    font-size: 1.5em;
     text-decoration: none;
     color: $light-gray;
     margin-right: 25px;
