--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,44 @@
 <div class="home-wrapper" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "background.jpg" %>);">
-<div class="home-container">
-  <div class="logo-home">
-    <%= image_tag "logo-fullscreen.png" %>
+  <div class="home-container">
+    <div class="logo-home">
+      <%= image_tag "logo-fullscreen.png" %>
+    </div>
+    <div class="animated-tagline">
+      <div class="text-tagline">
+        <h2>Comment vois-tu ta soirée ce soir ?</h2>
+      </div>
+      <div class="gif-row-1">
+        <div class="gifs">
+          <div class="gif2" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif2.gif" %>);"></div>
+          <div class="gif3" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif3.gif" %>);"></div>
+          <div class="gif4" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif4.gif" %>);"></div>
+          <div class="gif5" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif5.gif" %>);"></div>
+          <div class="gif6" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif6.gif" %>);"></div>
+          <div class="gif7" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif7.gif" %>);"></div>
+        </div>
+      </div>
+      <div class="gif-row-2">
+        <div class="gifs">
+          <div class="gif1 active" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif1.gif" %>);"></div>
+          <div class="gif2" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif2.gif" %>);"></div>
+          <div class="gif3" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif3.gif" %>);"></div>
+          <div class="gif4" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif4.gif" %>);"></div>
+          <div class="gif5" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif5.gif" %>);"></div>
+          <div class="gif6" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif6.gif" %>);"></div>
+        </div>
+      </div>
+      <div class="gif-row-3">
+        <div class="gifs">
+          <div class="gif1 active" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif1.gif" %>);"></div>
+          <div class="gif2" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif2.gif" %>);"></div>
+          <div class="gif3" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif3.gif" %>);"></div>
+          <div class="gif4" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif4.gif" %>);"></div>
+          <div class="gif5" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif5.gif" %>);"></div>
+          <div class="gif6" style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(<%= image_path "homegifs/homegif6.gif" %>);"></div>
+        </div>
+      </div>
+    </div>
+    <div class="start-button">
+      <%= link_to "Start Now", events_search_path %>
+    </div>
   </div>
-  <div class="tagline">
-    <h2>Comment vois-tu ta soirée ce soir ?</h2>
-  </div>
-  <div class="start-button">
-    <%= link_to "Start Now", events_search_path %>
-  </div>
-</div>
-</div>
-
