--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -37,3 +37,14 @@
 .link-orange a {
   color: $orange;
 }
+
+.step-bar {
+  a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5em;
+    .active {
+      color: $orange;
+    }
+  }
+}
