refacto in progress

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,283 +4,9 @@
   <% end %>
 
   <div class="step-bar">
-    <% case session[:search] %>
+    <% case params[:step] %>
     <% when nil %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"posée"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"posée", "changer_idees_rencontre"=>"regarder"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"posée", "changer_idees_rencontre"=>"regarder", "cinema_theatre"=>"cinéma"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"posée", "changer_idees_rencontre"=>"regarder", "cinema_theatre"=>"théâtre"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"posée", "changer_idees_rencontre"=>"social"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"posée", "changer_idees_rencontre"=>"social", "culture_comptoir"=>"culture"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"posée", "changer_idees_rencontre"=>"social", "culture_comptoir"=>"comptoir"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"posée", "changer_idees_rencontre"=>"social", "culture_comptoir"=>"comptoir", "boisson_musique"=>"musique"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"solo"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"couple"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"groupe"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"solo", "combien_coute"=>"payant"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"solo", "combien_coute"=>"gratuit / prix libre"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"couple", "musique_activite"=>"musique"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"couple", "musique_activite"=>"activité"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"groupe", "musique_activite"=>"musique"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"groupe", "musique_activite"=>"activité"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"couple", "musique_activite"=>"musique", "combien_coute"=>"payant"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"couple", "musique_activite"=>"musique", "combien_coute"=>"gratuit / prix libre"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"groupe", "musique_activite"=>"musique", "combien_coute"=>"payant"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle active"></i>
-      <% end %>
-    <% when {"posee_dynamique"=>"dynamique", "combien_personnes"=>"groupe", "musique_activite"=>"musique", "combien_coute"=>"gratuit / prix libre"} %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
-        <i class="fas fa-circle"></i>
-      <% end %>
-      <%= link_to events_search_path do %>
+      <%= link_to events_search_path(step: "posee_dynamique") do %>
         <i class="fas fa-circle active"></i>
       <% end %>
     <% end %>
