--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -39,12 +39,11 @@
 }
 
 .step-bar {
+    color: $orange;
+    font-size: 25px;
   a {
     color: white;
+    font-size: 25px;
     text-decoration: none;
-    font-size: 1.5em;
-    .active {
-      color: $orange;
-    }
   }
 }
