--- a/app/assets/stylesheets/pages/events-index.scss
+++ b/app/assets/stylesheets/pages/events-index.scss
@@ -4,62 +4,154 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  background-color: $light-black;
+  background-size: cover;
+  background-position: center;
+}
+
+
+.wrapper-loading {
+  width: 100%;
+  height: calc(100vh - 60px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: $light-black;
 }
 
-.tagline-index {
-  h1 {
+.tagline-index-loading {
+  margin-top: 80px;
+  margin-bottom: 60px;
+    h1 {
   font-family: 'Permanent Marker', cursive;
-  color: $white;
+  color: $orange;
   font-size: 3em;
   }
-  margin-bottom: 30px;
-  iframe {
-    margin-top: 30px;
-    margin-bottom: 10px;
+    img  {
+      width: 80px;
+    }
+  h3 {
+    text-align: center;
   }
 }
 
-.result-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.impatient-gif {
+  width: 50%;
+  height: 350px;
+  background-size: cover;
+  background-position: center;
 }
 
-.left-arrow {
-  font-size: 40px;
-  margin: 0 -100px;
+#tagline-end-loading {
+  font-family: 'Permanent Marker', cursive;
+  margin-bottom: 25px;
+  font-size: 45px;
+  color: $orange;
 }
 
-.right-arrow {
-  font-size: 40px;
-  margin: 0 -100px;
+.list-inline {
+  text-align: center;
+  }
+
+.display {
+  display: inline;
+  margin: 0 25px;
+  color: $orange;
+  font-size: 2.5em;
+  font-family: 'Permanent Marker', cursive;
+  opacity: 0;
+  animation-duration: 1.5s;
+  animation-name: fadein;
+  animation-fill-mode: forwards;
 }
+
+@keyframes fadein {
+
+  10% {
+    color: $orange;
+    opacity: 0.1;
+  }
+  20% {
+    color: $orange;
+    opacity: 0.2;
+  }
+  30% {
+    color: $orange;
+    opacity: 0.3;
+  }
+  40% {
+    color: $orange;
+    opacity: 0.4;
+  }
+  50% {
+    color: $orange;
+    opacity: 0.5;
+  }
+  60% {
+    color: $orange;
+    opacity: 0.6;
+  }
+  70% {
+    color: $orange;
+    opacity: 0.7;
+  }
+  80% {
+    color: $orange;
+    opacity: 0.8;
+  }
+  90% {
+    color: $orange;
+    opacity: 0.9;
+  }
+  100% {
+    color: $white;
+    opacity: 1;
+  }
+}
+
+
+
+.hide {
+  display: none !important;
+}
+
 
 .primary-result {
   font-size: 50px;
   color: $orange;
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 8px solid $orange;
-  width: 1000px;
-  height: 400px;
   text-align: center;
-  padding: 15px;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  flex-direction: column;
+
   img {
     max-width: 350px;
   }
-  h1  {
-    color: black;
-  }
-  h3 {
-    color: black;
+}
+
+.photo-result {
+  img {
+      border: 4px solid $orange;
   }
 }
 
 .text-result {
+  // background-color: rgba(255, 255, 255, 0.8);
+  // border: 8px solid $orange;
+  margin-top: 30px;
+  h1  {
+    color: $white;
+  }
+  h3 {
+    color: $white;
+  }
+}
+
+.button-result {
+  margin-top: 40px;
   a {
     font-family: 'Oswald', sans-serif;
     text-decoration: none;
@@ -76,6 +168,8 @@
 .bullet {
   li {
     height: 20px;
+    width: 20px;
+    border-radius: 50%;
   &.active {
     background-color: $orange;
   }
