Fix reponse theatre

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,5 @@
+<%= session[:search] %>
+
 <div class="wrapper-index" style="background-image: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0)), url(<%= image_path "background.jpg" %>);">
   <div class="tagline-index">
       <center><iframe src="https://giphy.com/embed/NhVauDVCe1Quk" width="300" height="120" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></center>
