--- a/app/assets/stylesheets/pages/events-index.scss
+++ b/app/assets/stylesheets/pages/events-index.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: calc(100vh - 60px);
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: $light-black;
@@ -16,9 +15,11 @@
   height: calc(100vh - 60px);
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  background-color: $light-black;
+  align-items: center;
+  background-color: $dark-black;
+  background-size: cover;
+  background-position: center;
 }
 
 .tagline-index-loading {
@@ -119,6 +120,7 @@
 
 
 .primary-result {
+  flex: 0 0 60%;
   font-size: 50px;
   color: $orange;
   text-align: center;
@@ -128,7 +130,7 @@
   flex-direction: column;
 
   img {
-    max-width: 350px;
+    height: 250px;
   }
 }
 
@@ -143,6 +145,7 @@
   // border: 8px solid $orange;
   margin-top: 30px;
   h1  {
+    font-size: 55px;
     color: $white;
   }
   h3 {
@@ -165,14 +168,8 @@
   }
 }
 
-.bullet {
-  li {
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-  &.active {
-    background-color: $orange;
-  }
-
-  }
+.arrow {
+  flex: 0 0 20%;
+  color: $orange;
+  font-size: 50px;
 }
