add buton instead of chrono on the middle waiting page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -10,6 +10,10 @@
     </ul>
   </div>
 
+  <%= link_to "#", class: "hide link-to-events" do %>
+    <h1 >Afficher les résultats</h1>
+  <% end %>
+
   <div class="tagline-index-loading">
     <h1><%= image_tag "waiting-gifs/gear.gif"%> Analyse de vos réponses en cours...</h1>
     <h3>Merci de patienter quelques instants</h3>
