--- a/app/assets/stylesheets/pages/events-index.scss
+++ b/app/assets/stylesheets/pages/events-index.scss
@@ -63,7 +63,7 @@
   font-size: 2.5em;
   font-family: 'Permanent Marker', cursive;
   opacity: 0;
-  animation-duration: 1.5s;
+  animation-duration: 1s;
   animation-name: fadein;
   animation-fill-mode: forwards;
 }
@@ -172,4 +172,33 @@
   flex: 0 0 20%;
   color: $orange;
   font-size: 50px;
+}
+
+.link-to-events {
+  // text-decoration: none;
+  // margin-top: 30px;
+  // padding: 10px 15px;
+  // border: 4px solid $orange;
+  // &:hover {
+  //   text-decoration: none;
+  //   background-color:
+  // }
+  // h1 {
+  //   color: $orange;
+  //   font-size: 25px;
+  // }
+  margin-top: 40px;
+  font-family: 'Oswald', sans-serif;
+  text-decoration: none;
+  color: $orange;
+  border: 3px solid $orange;
+  padding: 10px 15px;
+  h1 {
+    color: $orange;
+    font-size: 40px;
+  }
+  &:hover {
+    background-color: rgba(150, 150, 150, 0.2);
+    text-decoration: none;
+  }
 }
