--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,5 @@
+<%= session[:search] %>
+<%= @event.picture %>
 <div class="show-event-container">
   <div class="title-event text-center">
     <h1><%= @event.name %></h1>
@@ -37,6 +39,7 @@
           <% if @event.picture.present? %>
             <div class="event-photo-present" style="background-image: url('<%= image_path @event.picture %>');">
           <% end %>
+          <%= @event.picture %>
         </div>
         <div class="col-lg-4 order-sm-1 col-sm-12 order-lg-2">
           <div class="event-details">
