edited the homepage catchphrase and deleted the last question leading to concerts
Signed-off-by: Nassim Boukhalfa <nassim106@hotmail.com>

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,10 +5,10 @@
     </div>
     <div class="animated-tagline">
       <div class="text-tagline">
-        <h2>Joue et découvre quelle sera ta soirée à Nantes !</h2>
+        <h2>Qu'est-ce qu'on fait ce soir ?</h2>
       </div>
   </div>
   <div class="start-button">
-    <%= link_to "Start Now", events_search_path %>
+    <%= link_to "Invoquer Dionysos", events_search_path %>
   </div>
 </div>
